coffeeapp new  commit

--- a/component/bucket.html
+++ b/component/bucket.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 
 <style></style>
@@ -24,7 +24,7 @@
             <!--Show total number of coffee added to bucket here, do not add anything only Total count. Not even "Count - 5" but  only number like this "5" -->
         </div>
     </div>
-    <div id="myback"><img src="./images/back.gif">Menu page</div>
+    <div id="myback"><img src="../images/back.gif">Menu page</div>
     <div id="total-div">
 
         <h3 id="totalamount">Total Amount</h3>
@@ -44,4 +44,4 @@
 </body>
 
 </html>
-<script src="./scripts/bucket.js"></script>
+<script src="../scripts/bucket.js"></script>
