--- a/component/login.html
+++ b/component/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./style/login.css">
+    <link rel="stylesheet" href="../style/login.css">
 </head>
 <body>
     <div id="navbar">
@@ -18,10 +18,10 @@
          <p class="p1">Password:<a href="#">Forgot Password ? </a></p><input type="password" required placeholder="Enter Password" id="password">
          <button class="butt1" id="submit">SIGN IN</button>
          <button class="butt2"><p class="p2"><img src="https://tse3.mm.bing.net/th?id=OIP.1Nl9otEDi23qnVEQXPJuKQHaHa&pid=Api&P=0&w=191&h=191" class="img2" />CONTINUE WITH GOOGLE</p></button>
-        <p class="lastline">Don't have an account? <a href="./signup.html" class="signup">Sign Up</a></p>
+        <p class="lastline">Don't have an account? <a href="../component/signup.html" class="signup">Sign Up</a></p>
         </form>
     </div>
 </div>
 </body>
 </html>
-<script src="./scripts/login.js"></script>
+<script src="../scripts/login.js"></script>
