--- a/component/main.html
+++ b/component/main.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,7 +15,7 @@
         <!--Add navbar divs here-->
         <div id="login_id">Login</div>
         <div id="signup_id">signup</div>
-        <div><a href="./bucket.html" target="_self">bucket</a></div>
+        <div><a href="../component/bucket.html" target="_self">bucket</a></div>
         <!-- Link to bucket.html -->
         <div id="coffee_count">0
             <!--Show total number of coffee added to bucket here, do not add anything only Total count. Not even "Count - 5" but  only number like this "5" -->
@@ -29,4 +29,4 @@
 </body>
 
 </html>
-<script src="./scripts/main.js"></script>
+<script src="../scripts/main.js" type="text/javascript"></script>
