--- a/component/signup.html
+++ b/component/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup</title>
-    <link rel="stylesheet" href="./style/signup.css">
+    <link rel="stylesheet" href="../style/signup.css">
 </head>
 <body>
     <div id="navbar">
@@ -18,11 +18,11 @@
                             <p class="p1">Email:</p><input type="email" required placeholder="Enter Email" id="email"><br><br>
                             <p class="p1">Password:</p><input type="password" required placeholder="Enter Password" id="password">
                             <input class="butt1" type="submit" value="SIGN Up" id="submit">
-                            <p class="lastline">Already have an account? <a href="./login.html" class="signup">Log in</a></p>
+                            <p class="lastline">Already have an account? <a href="../component/login.html" class="signup">Log in</a></p>
                            </form>
                             
     </div>
 </div>
 </body>
 </html>
-<script src="./scripts/signup.js"></script>
+<script src="../scripts/signup.js"></script>
